# exercises

./: README.md  db.sqlite3  pyproject.toml
exercises/: settings.py  urls.py
exercises_app/: constants.py  models.py  serializers.py  views.py
exercises_app/migrations/: 0001_initial.py
testing/: client.py  tests.py
